// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    313
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    eSpace works from
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    1970
    <span>
       to 
    </span>
    2054
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
/>
`;
